@@ -35,7 +35,6 @@ import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * Web Container Wrapper for Spring 2+
@@ -67,7 +66,7 @@ public class SpringContainerAware implements ContainerAware {
                 Arrays.asList(names) :
                 Arrays.stream(names)
                         .filter(name -> !StringUtils.startsWith(name, "org.springframework"))
-                        .collect(Collectors.toList());
+                        .toList();
 
         List<Object> beans = new ArrayList<>(beanNames.size());
         beanNames.forEach(name -> beans.add(ContextSupport.getBean(name)));
@@ -80,12 +79,12 @@ public class SpringContainerAware implements ContainerAware {
 
         // if Interceptor
         if (clazz.isAnnotationPresent(Interceptor.class)) {
-            if (bean instanceof HandlerInterceptor) {
+            if (bean instanceof HandlerInterceptor interceptorBean) {
                 Interceptor interceptor = clazz.getAnnotation(Interceptor.class);
 
                 log.info("Loaded Interceptor: [order={}, interceptors={}, excludes={}]",
                         interceptor.order(), interceptor.value(), interceptor.excludes());
-                consumer.accept(new CatcherMapping(interceptor, (HandlerInterceptor) bean));
+                consumer.accept(new CatcherMapping(interceptor, interceptorBean));
                 return;
             }
 
@@ -184,8 +183,7 @@ public class SpringContainerAware implements ContainerAware {
     public void destroy() {
         // Let Spring destroy all beans.
         // Only call close() on WebApplicationContext
-        if (ContextSupport.getApplicationContext() instanceof ConfigurableApplicationContext) {
-            ConfigurableApplicationContext context = (ConfigurableApplicationContext) ContextSupport.getApplicationContext();
+        if (ContextSupport.getApplicationContext() instanceof ConfigurableApplicationContext context) {
             if (context.isActive())
                 context.close();
         }
